Moved more parameters to configration file, and some changes in sampling

--- a/UCBC 2024/Simulations/OpeningLead.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead.ipynb
@@ -48,7 +48,8 @@
      "output_type": "stream",
      "text": [
       "INFO:tensorflow:Restoring parameters from ..\\Models/bidding-3233000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/binfo-286000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/binfo-808000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lead-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty-1000000\n",
@@ -71,10 +72,10 @@
    "outputs": [],
    "source": [
     "# both vulnerable. you are sitting North as dealer and you hold\n",
-    "hand = 'Q6542.QJ7.AKT6.7'\n",
+    "hand = 'QJT75.86.3.AT52'\n",
     "\n",
     "# the auction goes:\n",
-    "auction = [\"PAD_START\", \"PAD_START\", \"1S\", \"PASS\", \"2N\", \"PASS\", \"3C\", \"X\", \"4S\", \"5C\", \"X\", \"PASS\", \"PASS\", \"PASS\"]\n",
+    "auction = [\"PAD_START\", \"PAD_START\", \"PAD_START\", \"2N\", \"PASS\", \"3C\", \"PASS\", \"3D\", \"PASS\", \"6N\", \"PASS\", \"PASS\", \"PASS\"]\n",
     "\n",
     "# what to lead?\n",
     "\n",
@@ -91,7 +92,7 @@
     {
      "data": {
       "text/plain": [
-       "D6"
+       "C5"
       ]
      },
      "execution_count": 4,
@@ -122,26 +123,14 @@
     {
      "data": {
       "text/plain": [
-       "[{'card': 'Dx',\n",
-       "  'insta_score': 0.0562,\n",
-       "  'expected_tricks': 9.39,\n",
-       "  'p_make_contract': 0.15},\n",
-       " {'card': 'HQ',\n",
-       "  'insta_score': 0.0786,\n",
-       "  'expected_tricks': 9.39,\n",
-       "  'p_make_contract': 0.16},\n",
-       " {'card': 'DA',\n",
-       "  'insta_score': 0.3247,\n",
-       "  'expected_tricks': 9.38,\n",
-       "  'p_make_contract': 0.16},\n",
-       " {'card': 'Hx',\n",
-       "  'insta_score': 0.0807,\n",
-       "  'expected_tricks': 9.38,\n",
-       "  'p_make_contract': 0.16},\n",
-       " {'card': 'Sx',\n",
-       "  'insta_score': 0.3844,\n",
-       "  'expected_tricks': 9.44,\n",
-       "  'p_make_contract': 0.18}]"
+       "[{'card': 'Cx',\n",
+       "  'insta_score': 0.2287,\n",
+       "  'expected_tricks_sd': 11.43,\n",
+       "  'p_make_contract': 0.53},\n",
+       " {'card': 'SQ',\n",
+       "  'insta_score': 0.703,\n",
+       "  'expected_tricks_sd': 11.49,\n",
+       "  'p_make_contract': 0.56}]"
       ]
      },
      "execution_count": 5,
@@ -175,60 +164,82 @@
     {
      "data": {
       "text/plain": [
-       "['9.8xx.Q8xx.A8xxx KJT8x.AK9x.J9x.x Ax.Txx.xx.KQJT9x 0.22947',\n",
-       " '8x.K8x.Qxx.KQJ8x AKJT9x.AT9xx.8x. .xx.J9xx.AT9xxxx 0.22542',\n",
-       " 'x.Txx.Q8xx.A8xxx AKT98x.Axx.Jxxx. J.K98x.9.KQJT9xx 0.21147',\n",
-       " '.98xx.Q98x.A9xxx AKJ98xx.Axxx.Jx. T.KT.xxx.KQJT8xx 0.20804',\n",
-       " '.K9xxx.8xx.A9xxx AKJT8xx.ATx.xx.T 9.8x.QJ9x.KQJ8xx 0.18512',\n",
-       " 'T.K8x.Q8xx.A98xx AKJ9xx.AT9xx.9x. 8.xx.Jxx.KQJTxxx 0.18365',\n",
-       " '9x.ATxx.9x.Axxxx AKJTx.K8xx.Q8xx. 8.9x.Jxx.KQJT98x 0.18246',\n",
-       " 'T9.Kxx.9xx.KJ8xx AKJ8xx.ATxx.J8x. .98x.Qxx.AQT9xxx 0.17687',\n",
-       " 'KT.xxx.Qxx.K9xxx AJ8xx.AKT9.98xx. 9.8xx.Jx.AQJT8xx 0.17467',\n",
-       " '.T98x.J9xx.KQJxx KJT98xx.AK.Q8x.T A.xxxx.xx.A98xxx 0.16013',\n",
-       " '8.8xx.QJxx.AQT8x AKJT9xx.AT9.8xx. .Kxxx.9x.KJ9xxxx 0.15820',\n",
-       " '8.KT8x.Qxx.Qxxxx AKJT9.A9x.J98xx. xx.xxx.x.AKJT98x 0.15620',\n",
-       " 'KT.9x.Q8xx.KQ8xx AJ8xx.AKTx.Jxxx. 9.8xxx.9.AJT9xxx 0.15345',\n",
-       " '.T98x.Jxxx.AQ8xx KJT8xx.AKxxx.Qx. A9.x.98x.KJT9xxx 0.15254',\n",
-       " 'AT.8xx.98x.AT98x KJ98x.AKTx.QJxx. x.9xx.xx.KQJxxxx 0.15148',\n",
-       " '8x.Kxx.Q9x.AJTxx AKJTx.A9x.Jxxxx. 9.T8xx.8.KQ98xxx 0.15113',\n",
-       " '9.ATxx.98x.Kxxxx AKJT8x.K98x.Jx.J x.xx.Qxxx.AQT98x 0.15090',\n",
-       " '9.K98x.9xx.AQ9xx AKJ8xx.ATxx.Qxx. T.xx.J8x.KJT8xxx 0.14378',\n",
-       " 'x.A8x.Jxxx.KJxxx AKJ98x.KT9x.Q9x. T.xxx.8x.AQT98xx 0.14327',\n",
-       " 'x.K9xx.8xx.KTxxx KJT98x.A8x.QJx.Q A.Txx.9xx.AJ98xx 0.14215',\n",
-       " 'x.K9xxx.9x.KJ9xx AKJ98x.A8xx.Jx.x T.T.Q8xxx.AQT8xx 0.14153',\n",
-       " '8x.Kxx.Q8x.AQT9x AKJTx.A98x.Jxxx. 9.Txx.9x.KJ8xxxx 0.14017',\n",
-       " 'T.Kxx.8xxx.K8xxx A98xx.Axx.QJ9x.J KJ.T98x.x.AQT9xx 0.13965',\n",
-       " '9x.KT9xx.x.AT9xx AKJT8x.Axx.Q8x.8 .8x.J9xxx.KQJxxx 0.13776',\n",
-       " 'A9.A9x.98x.Q98xx KJT8x.KTx.Qxxx.A x.8xxx.Jx.KJTxxx 0.13680',\n",
-       " 'KT.K8xx.xx.KJxxx AJ98x.ATxx.QJxx. x.9x.98x.AQT98xx 0.13677',\n",
-       " 'K.xx.Q8xxx.KQxxx AJT98x.AKT8x.Jx. x.9xx.9x.AJT98xx 0.13665',\n",
-       " '.T9x.J98xx.AJTxx AKT98x.K8xxx.Qx. Jx.Ax.xx.KQ98xxx 0.13659',\n",
-       " '.Txx.QJ98x.AT9xx AKJT9x.A98x.xx.x 8x.Kxx.xx.KQJ8xx 0.13277',\n",
-       " 'T8.T9x.J9x.AJTxx AKJ9xx.A8x.xxx.x .Kxxx.Q8x.KQ98xx 0.13137',\n",
-       " 'T.T9x.Q98x.KJT8x AK9x.Axxx.Jxxx.x J8x.K8x.x.AQ9xxx 0.13018',\n",
-       " 'K.9xxx.J8x.A98xx AJT8xx.AKT.Q9xx. 9.8xx.xx.KQJTxxx 0.13002',\n",
-       " '8.Axx.98xx.AJxxx AKJT9x.KT8x.Jxx. x.9xx.Qx.KQT98xx 0.12946',\n",
-       " '8x.AT8x.xx.KQJT8 AKJT9.Kxxx.J9xx. x.9x.Q8x.A9xxxxx 0.12941',\n",
-       " '9.8xxx.Q9x.AJxxx AJ8x.AK9x.Jxxx.x KTx.Tx.8x.KQT98x 0.12740',\n",
-       " 'x.9xx.8xxx.KJT8x KJT9x.AK8.Q9xx.x A8.Txxx.J.AQ9xxx 0.12632',\n",
-       " '.98x.J8xxx.AJTxx AKJT98x.KTxx.Q.9 x.Axx.9xx.KQ8xxx 0.12381',\n",
-       " 'A.xx.8xxxx.KQ98x KJT9xx.AKT9x.Q9. 8.8xx.Jx.AJTxxxx 0.12336',\n",
-       " '98.A9xx.xx.KJ9xx AKJTx.K8xx.Q98x. x.Tx.Jxx.AQT8xxx 0.12296',\n",
-       " 'x.9xx.QJxx.Axxxx AKJT9x.ATx.xxx.x 8.K8xx.98.KQJT98 0.12220',\n",
-       " '.T8xx.QJxx.AT8xx AJT9x.AKx.98xx.Q K8x.9xx.x.KJ9xxx 0.12132',\n",
-       " 'J.T9x.98xx.AQ98x A98xx.AK8x.QJxx. KT.xxx.x.KJTxxxx 0.11944',\n",
-       " 'Jx.ATx.QJ9.K8xxx AKT98x.K98.xxx.Q .xxxx.8xx.AJT9xx 0.11736',\n",
-       " '.Kxxxx.Jxx.KJ9xx AKJT9xx.A8.Q9xx. 8.T9x.8x.AQT8xxx 0.11530',\n",
-       " 'x.KT8xx.Jx.KJ8xx AJT98x.A9xx.8x.A K.x.Q9xxx.QT9xxx 0.11483',\n",
-       " '9.AT9.8xxx.AJxxx AKJT8x.Kxx.J9xx. x.8xxx.Q.KQT98xx 0.11369',\n",
-       " 'Kx.T9.8xxx.KJ98x AJTx.Axxx.QJ9x.x 98.K8xx.x.AQTxxx 0.11328',\n",
-       " 'J9.9xx.xxx.AJT9x AKT8x.ATx.J8xx.8 x.K8xx.Q9.KQxxxx 0.11315',\n",
-       " '.xxx.Q8xxx.ATxxx AKJT9xx.AT8x.9.8 8.K9x.Jxx.KQJ9xx 0.11262',\n",
-       " '.Kxx.Q9xxx.QJ9xx AKJT98x.AT98.x.x x.xxx.J8x.AKT8xx 0.11233',\n",
-       " 'x.K8x.8xxx.KJT8x AKJT98.Axxxx.Qx. x.T9.J9x.AQ9xxxx 0.11203',\n",
-       " '9x.A98xx.x.KQxxx AKJTx.Kxx.Q9xxx. 8.Tx.J8x.AJT98xx 0.11063',\n",
-       " 'J.9x.Q9xxx.AJTxx AKT9xx.AT8x.Jx.x 8.Kxxx.8x.KQ98xx 0.11049',\n",
-       " 'Kx.T8x.Q8x.AJ8xx AJT98x.AK9x.xx.9 .xxx.J9xx.KQTxxx 0.10995']"
+       "['Axxx.AJx.8xxx.Qx .QT9xxx.T9x.9xxx K8x.Kx.AKQJx.KJ8 0.48639',\n",
+       " '98xx.KQT.A9xx.Qx x.9xxx.QT8xx.9xx AKx.AJx.KJx.KJ8x 0.47680',\n",
+       " 'K8xx.Qxx.AQxx.xx 9.T9xxx.JTxx.J8x Axx.AKJ.K98x.KQ9 0.44096',\n",
+       " '9xxx.A9x.AQxx.Jx 8x.QTxx.T8xx.98x AK.KJx.KJ9x.KQxx 0.42967',\n",
+       " '98xx.Axx.ATx.K8x xx.T9xx.Q9xx.9xx AK.KQJ.KJ8xx.QJx 0.42383',\n",
+       " 'A8.Q9xx.KT9xx.QJ 9xx.Txx.8xx.xxxx Kxx.AKJ.AQJx.K98 0.42252',\n",
+       " 'A9.Txxx.AJxx.QJx 8xx.J9xx.T9x.98x Kxx.AKQ.KQ8xx.Kx 0.42066',\n",
+       " '8xx.KQxx.KJxx.Qx 9x.Txxx.Txx.J8xx AKx.AJ.AQ98x.K9x 0.41473',\n",
+       " 'A9xx.AJTx.Tx.QJ9 x.9xxx.9xxx.8xxx K8x.KQx.AKQ8x.Kx 0.41313',\n",
+       " 'K9xx.Qxx.Q8x.KJx 8x.T9xx.T9xx.Q9x Ax.AKJ.AKJxx.8xx 0.41088',\n",
+       " '9xxx.Qx.KJx.KQxx .T9xxxx.8xxx.J9x AK8.AKJ.AQT9x.8x 0.40656',\n",
+       " '8xx.KQTx.AQ8x.8x x.J9xx.T9xxx.Jxx AK9.Axx.KJx.KQ9x 0.40329',\n",
+       " 'xxx.AKQx.98xx.Qx 9x.JT9xx.Txx.98x AK8.xx.AKQJx.KJx 0.40179',\n",
+       " '98x.KQTx.Ax.Qxxx xx.J9x.JT9xxxx.9 AKx.Axx.KQ8.KJ8x 0.39980',\n",
+       " '98xx.AQx.8xx.KQx xx.JT9xx.JTxx.8x AK.Kxx.AKQ9x.J9x 0.39514',\n",
+       " 'Kxx.KQxx.T8xx.Kx xx.T9xx.J9xx.98x A98.AJx.AKQx.Qxx 0.38946',\n",
+       " '98x.Q9xx.AQxx.Kx xx.Jxxx.JT8.98xx AKx.AKT.K9xx.QJx 0.38365',\n",
+       " 'K8xx.Kxx.QTx.K8x x.J9xx.98xxx.Jxx A9x.AQx.AKJx.Q9x 0.38318',\n",
+       " 'Kxxx.AJx.QJT.98x x.T9xxx.xxxx.Qxx A98.KQx.AK9x.KJx 0.37578',\n",
+       " 'xx.AKxx.Jxxx.KJx 98x.J9x.T98x.8xx AKx.QTx.AKQx.Q9x 0.37475',\n",
+       " 'K8xx.Kxx.9xx.KQx .J9xxx.Txxx.J98x Axx.AQT.AKQJ8.xx 0.37300',\n",
+       " 'K9x.AQTx.Q9xx.xx xxx.9xxxx.Txx.J9 A8.KJ.AKJ8x.KQ8x 0.37261',\n",
+       " 'A8xx.KJx.A9x.98x x.T9xxx.Txxx.Jxx K9x.AQx.KQJ8x.KQ 0.37193',\n",
+       " '8xxx.KQT.KQJ.8xx 9.9xxx.T98xx.J9x AKx.AJx.Axxx.KQx 0.36865',\n",
+       " 'A8x.JT9x.KQJ.Jxx xx.xxx.T8xx.98xx K9x.AKQ.A9xxx.KQ 0.36859',\n",
+       " 'A8xx.Kxx.KJT9.98 x.9xxx.8xxxx.Jxx K9x.AQT.AQx.KQxx 0.36771',\n",
+       " '8xxx.Jxx.AQx.KJx x.QTxx.T8xx.98xx AK9.AKx.KJ9xx.Qx 0.36475',\n",
+       " 'Kxx.KJxx.KJxx.98 9x.T9xxx.Txx.Qxx A8x.AQ.AQ98x.KJx 0.36271',\n",
+       " 'K8x.Q9xx.AQ9x.xx xxx.Txxx.J8x.J9x A9.AKJ.KTxxx.KQx 0.35818',\n",
+       " 'A9.QJ9x.J9x.K8xx 8x.Txxx.Txxx.J9x Kxx.AKx.AKQ8x.Qx 0.35676',\n",
+       " '8x.AKQ9.T8xx.Q9x xx.JTxxx.J9xxx.8 AK9.xx.AKQ.KJxxx 0.35569',\n",
+       " 'xxx.QJxx.Kxx.KQ9 8x.T9xx.Q98xxx.x AK9.AK.AJT.J8xxx 0.35549',\n",
+       " 'Ax.QTxx.Q8x.Kxxx 9xx.Jxx.J9xxx.9x K8x.AKx.AKTx.QJ8 0.35507',\n",
+       " 'xxx.QT9x.KQ8x.KJ 9x.Jxxxx.Jxxx.9x AK8.AK.AT9x.Qxxx 0.35488',\n",
+       " 'A9x.KJxx.QJx.9xx 8x.QT9xx.T9xx.8x Kxx.Ax.AK8x.KQJx 0.35200',\n",
+       " '8xx.Qxxx.KQx.KJ9 9x.JT9x.T9xx.8xx AKx.AKx.A8xx.Qxx 0.35115',\n",
+       " 'Ax.J9xx.KTxx.Kxx xx.QTxxx.xxx.98x K9x.AK.AQJ98.QJx 0.35104',\n",
+       " 'K9x.AKJx.8xx.8xx x.Q9xxx.Txxx.9xx A8x.Tx.AKQJ9.KQJ 0.34822',\n",
+       " 'Kxx.KQ9x.Txx.K9x 98.Jxxxx.9xx.8xx Axx.AT.AKQJx.QJx 0.34423',\n",
+       " 'Kxx.JT9x.KQxx.Qx 9x.xxxx.J8xx.J8x A8x.AKQ.ATx.K9xx 0.34415',\n",
+       " '9x.KQJx.KT8.QJxx 8xx.9xxx.Jxxx.8x AKx.ATx.AQ9x.K9x 0.33826',\n",
+       " 'AK8x.AJxx.9x.9xx xx.9xx.JT8xx.8xx 9x.KQT.AKQxx.KQJ 0.33608',\n",
+       " 'xxx.AQT9.Q9x.K8x 8.xxxx.J8xxx.J9x AK9.KJx.AKTx.Qxx 0.33427',\n",
+       " '8xx.AKxx.J8xxx.K x.T9xx.T9xx.J9xx AKx.QJx.AKQ.Q8xx 0.33349',\n",
+       " 'AKx.QJ9x.JT9.J8x 8xx.Txxx.8xxx.xx 9x.AK.AKQxx.KQ9x 0.33091',\n",
+       " '98xx.Qxxx.ATx.KQ .JT9x.J98xxx.8xx AKx.AKx.KQx.J9xx 0.32822',\n",
+       " 'Axx.AJxx.Q9x.9xx xx.T9xxx.J8xx.Jx K98.KQ.AKTx.KQ8x 0.32591',\n",
+       " '9x.KJ9x.Kxx.KQ8x 8x.Txxx.JT9xx.xx AKx.AQx.AQ8x.J9x 0.32428',\n",
+       " 'K8xx.AQxx.xxx.Q8 9x.J9xx.Jxx.9xxx Ax.KTx.AKQT9.KJx 0.32240',\n",
+       " 'Kxx.K9xx.QJx.QJx 8x.JTxx.Txxx.98x A9x.AQx.AK9x.Kxx 0.31992',\n",
+       " 'xxx.AJ9x.QJx.K9x 9x.Qxxxx.T9xxx.x AK8.KT.AK8x.QJ8x 0.31664',\n",
+       " 'Kx.QT9x.ATx.QJ98 98x.Jxxx.98x.xxx Axx.AKx.KQJxx.Kx 0.31272',\n",
+       " 'Kxxx.A9xx.ATx.8x 9x.JTxx.xxxx.xxx A8.KQx.KQJ9.KQJ9 0.31210',\n",
+       " 'Axxx.AQ9x.98x.Jx x.JTxx.Txxx.9xxx K98.Kx.AKQJx.KQ8 0.31071',\n",
+       " '8x.KJTx.KQJx.J9x xxx.Q9x.9xxx.8xx AK9.Axx.AT8x.KQx 0.30994',\n",
+       " 'Kxxx.AKJx.Txx.xx 9x.T9xx.J8xx.J8x A8.Qxx.AKQ9x.KQ9 0.30779',\n",
+       " '8x.AQJx.KJ8xx.J8 9x.T9xxx.Txx.9xx AKx.Kx.AQ9x.KQxx 0.30659',\n",
+       " 'K8xx.KQ9x.KTxx.9 9x.xxx.9xx.Q8xxx Ax.AJx.AQJ8x.KJx 0.30573',\n",
+       " 'Axx.QJxx.J9x.Kxx 8xx.9xxx.8xxx.J9 K9.AKT.AKQx.Q8xx 0.30480',\n",
+       " 'K9xx.KQxx.Jxxx.Q xx.J9xx.T9x.98xx A8.ATx.AKQ8x.KJx 0.30439',\n",
+       " 'K8x.QJ9x.KQJx.8x xxx.xxxx.8xx.xxx A9.AKT.AT9x.KQJ9 0.29909',\n",
+       " 'K8x.Q9xx.Jxx.KQJ x.JTxx.T8xx.9xxx Axx.AKx.AKQ9x.8x 0.29726',\n",
+       " 'Kxx.KQTx.JTx.Q9x 98x.Jxx.98xx.J8x Ax.A9x.AKQxx.Kxx 0.29515',\n",
+       " 'K8xx.KJx.Qxx.K9x x.T9xx.T9xx.J8xx A9x.AQx.AKJ8x.Qx 0.29338',\n",
+       " 'AKxx.Jxxx.QTx.J8 98.T9xx.J9xxx.9x xx.AKQ.AK8x.KQxx 0.29139',\n",
+       " 'K9.QT9x.QJ9x.QJx xxx.Jxxx.8xx.9xx A8x.AKx.AKTxx.K8 0.28706',\n",
+       " 'A98.AJxx.KT8x.8x xx.T9x.J9xxx.9xx Kxx.KQx.AQx.KQJx 0.28692',\n",
+       " 'K8xx.ATxx.Q8x.QJ 9x.9xxx.J9x.98xx Ax.KQJ.AKTxx.Kxx 0.28654',\n",
+       " 'A8xx.JTxx.Jx.KQx 9.Q9xx.9xxx.98xx Kxx.AKx.AKQ8x.Jx 0.28593',\n",
+       " '8x.QJTx.AKJ8x.Jx xx.9xxx.xxx.9xxx AKx.AKx.QT9x.KQ8 0.27301',\n",
+       " 'K8xx.KQJx.T98x.Q x.9xxx.xxx.J98xx A9x.ATx.AKQx.Kxx 0.27067',\n",
+       " 'K9x.QJxx.QJxx.K8 xx.9xx.T8x.9xxxx A8x.AKT.AK9xx.QJ 0.27002',\n",
+       " 'A9xx.ATx.QT.Qxxx xx.9xxxx.8xxxx.x K8.KQJ.AK9x.KJ98 0.26621',\n",
+       " 'Kxxx.T9xx.KQx.QJ x.Jxxx.T8xx.98xx A98.AKQ.AJ9x.Kxx 0.26304',\n",
+       " '8xx.AKTx.J8x.QJx 9.Q9xx.Txxx.98xx AKx.Jxx.AKQ9x.Kx 0.25907',\n",
+       " 'Kxx.AJxx.Jx.Q8xx 9x.T9xx.QT9xx.xx A8x.KQx.AK8xx.KJ 0.25125']"
       ]
      },
      "execution_count": 6,
