--- a/src/examples/OpeningLead-hf.ipynb
+++ b/src/examples/OpeningLead-hf.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e299ffcc-5180-4607-b6f8-c7280208d9c6",
    "metadata": {
     "tags": []
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "26570686",
    "metadata": {},
    "outputs": [],
@@ -41,31 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "fe373c76",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 14.91it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 14.67it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 13.58it/s]\n",
-      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 14.69it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'D:\\\\github\\\\ben\\\\hfmodels'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import huggingface_hub\n",
     "import os\n",
@@ -82,39 +61,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "627ca134-93a3-4d36-bc4d-a1207d84cd88",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Restoring parameters from hfmodels/lead-1000000\n",
-      "INFO:tensorflow:Restoring parameters from hfmodels/binfo-100000\n",
-      "INFO:tensorflow:Restoring parameters from hfmodels/bidding-100000\n",
-      "INFO:tensorflow:Restoring parameters from hfmodels/lr3-1000000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nn.leader import Leader\n",
     "from nn.bid_info import BidInfo\n",
     "from nn.bidder import Bidder\n",
     "from nn.lead_singledummy import LeadSingleDummy\n",
-    "lead = Leader(f'{folder}/lead-1000000')\n",
+    "lead_suit = Leader(f'{folder}/lead-1000000')\n",
+    "lead_nt = Leader(f'{folder}/lead-1000000')\n",
     "biddinginfo = BidInfo(f'{folder}/binfo-100000')\n",
     "bidder = Bidder(\"\", f'{folder}/bidding-100000')\n",
     "sd_model = LeadSingleDummy(f'{folder}/lr3-1000000')\n",
-    "models = Models(bidder, biddinginfo, lead, sd_model, None, 0.1, 0.05, 1.0, 0.1, False, -1, -1)\n",
+    "models = Models(bidder, biddinginfo, lead_suit, lead_nt, sd_model, None, 0.1, 0.05, 1.0, 0.1, False, -1, -1)\n",
     "sampler = Sample(0.01, 0.1, 0.03, 0.05, 64, 5000, 5000, 128, 100, False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c3397678",
    "metadata": {},
    "outputs": [],
@@ -133,21 +102,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "a2b5fe25",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "H7"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lead.card"
    ]
@@ -164,32 +122,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "956ef356",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'card': 'Hx',\n",
-       "  'insta_score': 0.6122,\n",
-       "  'expected_tricks': 9.98,\n",
-       "  'p_make_contract': 0.65},\n",
-       " {'card': 'DA',\n",
-       "  'insta_score': 0.1587,\n",
-       "  'expected_tricks': 9.71,\n",
-       "  'p_make_contract': 0.59},\n",
-       " {'card': 'HT',\n",
-       "  'insta_score': 0.0649,\n",
-       "  'expected_tricks': 9.9,\n",
-       "  'p_make_contract': 0.63}]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lead.to_dict()['candidates']"
    ]
@@ -209,75 +145,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "7cb2bf98",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Axx.KJ9x.K.AJxxx Q98.Ax.Txxxxx.KQ KJxx.xxx.QJx.T8x 0.08078',\n",
-       " '9xx.AKJx.T.AKJTx A8x.9x.KQxxxx.Qx KQJx.xxx.Jxx.8xx 0.07396',\n",
-       " '98x.A9xx.K.AKT8x Kxx.Kxx.QJTxx.Qx AQJx.Jx.xxxx.Jxx 0.06952',\n",
-       " 'Axx.AJ.Tx.AK8xxx 98x.Kxxx.KQxxx.x KQJx.9xx.Jxx.QJT 0.06678',\n",
-       " 'Ax.AJxx.xx.AQ8xx KJ9.Kxx.Jxxxx.Jx Q8xxx.9x.KQT.KTx 0.06346',\n",
-       " 'Axx.AKJx.x.KQ8xx K8x.9xxx.KQxxx.x QJ9x.x.JTxx.AJTx 0.05800',\n",
-       " 'Axx.AK9x.x.KQT8x K9x.xx.KJTxx.Axx QJ8x.Jxx.Qxxx.Jx 0.05644',\n",
-       " 'AQ9.K9xx.x.KQJ8x Kx.AJxx.QTxxx.Tx J8xxx.x.KJxx.Axx 0.05347',\n",
-       " 'AJ8.KJxx.x.AK8xx K9x.xxx.KQTxx.Tx Qxxx.A9.Jxxx.QJx 0.05057',\n",
-       " 'A8x.KJxx.x.AKxxx Qxx.A9xx.KQxxx.x KJ9x.x.JTxx.QJT8 0.03821',\n",
-       " 'A8x.Kxxx..AQJTxx K9x.xx.QJTxxx.K8 QJxx.AJ9.Kxxx.xx 0.03808',\n",
-       " 'AKx.xxx..AQJ8xxx J9x.A9x.KQJxxx.x Q8xx.KJx.Txxx.KT 0.03717',\n",
-       " 'AJx.AK9x.x.AJxxx Q8x.xx.KJxxxx.KT K9xx.Jxx.QTx.Q8x 0.03715',\n",
-       " 'K9x.K9xx.x.AKJxx xxx.Axxx.KJxxxx. AQJ8.J.QTx.QT8xx 0.03651',\n",
-       " 'KJx.AK9x.x.QJ8xx 98.Jxxx.Qxxxx.AK AQxxx.x.KJTx.Txx 0.03487',\n",
-       " 'A8x.AK9x.J.ATxxx K9.Jxxx.QTxxx.QJ QJxxx.x.Kxxx.K8x 0.03226',\n",
-       " 'AQ8.Kxxx.x.AJ8xx K9x.J9.KJxxx.QTx Jxxx.Axx.QTxx.Kx 0.03172',\n",
-       " 'xxx.AK9x.J.AQ8xx QJx.xx.KQxxxx.KT AK98.Jxx.Txx.Jxx 0.03084',\n",
-       " 'AKx.Axxx.x.QJ8xx 9xx.Kx.KJTxxx.Kx QJ8x.J9x.Qxx.ATx 0.03060',\n",
-       " 'A9x.Axx.T.AQ8xxx K8x.9xxx.Kxxxx.K QJxx.KJ.QJxx.JTx 0.03059',\n",
-       " 'Ax.Kxxx.Jx.AQ8xx Jx.Jx.KTxxxx.KTx KQ98xx.A9x.Qx.Jx 0.03049',\n",
-       " 'Jxx.AJ9x.Kx.KQTx K8.xxx.JTxxx.A8x AQ9xx.Kx.Qxx.Jxx 0.03046',\n",
-       " 'KJ.Axxx.Kx.KTxxx A8x.9xx.QJTxx.Qx Q9xxx.KJ.xxx.AJ8 0.02985',\n",
-       " 'A8x.Axxx.x.AKJTx xx.KJ9.KJxxxx.8x KQJ9x.xx.QTx.Qxx 0.02858',\n",
-       " 'AQx.Kxx..KQJ8xxx K8x.J9x.KQJxxxx. J9xx.Axx.Txx.ATx 0.02733',\n",
-       " 'xx.KJ9x.J.AKQxxx AK9.xxx.QTxxxx.J QJ8xx.Ax.Kxx.T8x 0.02725',\n",
-       " 'K8.AKx.Tx.KJT8xx Jxx.Jxx.KQxxxx.Q AQ9xx.9xx.Jx.Axx 0.02659',\n",
-       " 'Q8x.K9xx.K.KQJ8x J.AJxx.QJTxxx.Tx AK9xxx.x.xxx.Axx 0.02601',\n",
-       " 'AQx.Jxxx.x.AQJT8 9xx.Kx.KQJxxx.Kx KJ8x.A9x.Txx.xxx 0.02576',\n",
-       " 'KJx.AJxx.x.KQT8x xx.Kxx.KQxxxx.xx AQ98x.9x.JTx.AJx 0.02536',\n",
-       " 'Kxx.Kxxx.x.AKJ8x AJ8.A9x.Jxxxx.xx Q9xx.Jx.KQTx.QTx 0.02509',\n",
-       " 'K8x.AJ.x.KQJT8xx xx.9xxx.KQTxx.Ax AQJ9x.Kxx.Jxxx.x 0.02460',\n",
-       " '98.AKxx.KJx.KTxx Jx.Jxxx.QTxxx.A8 AKQxxx.9.xx.QJxx 0.02456',\n",
-       " 'KJx.Kxxx.J.AKQxx Q8.AJx.Qxxxxx.8x A9xxx.9x.KTx.JTx 0.02450',\n",
-       " 'Qx.Kxxx.xx.AKQJx A9x.Jx.KQTxxx.T8 KJ8xx.A9x.Jx.xxx 0.02443',\n",
-       " 'KQJ.A9xx.x.KQ8xx xx.Kxx.Jxxxx.ATx A98xx.Jx.KQTx.Jx 0.02427',\n",
-       " 'K9x.K9x.Q.AKJ8xx AJ.Jxxx.KTxxxx.x Q8xxx.Ax.Jxx.QTx 0.02417',\n",
-       " 'KJ.Axxx.Tx.AKTxx 98x.Kxx.KJxxx.Qx AQxxx.J9.Qxx.J8x 0.02366',\n",
-       " 'Q9x.J9x.K.AKQ8xx K8.Axx.QTxxxx.JT AJxxx.Kxx.Jxx.xx 0.02360',\n",
-       " 'AK9.Axxx.x.KTxxx xx.K9x.QJTxxx.QJ QJ8xx.Jx.Kxx.A8x 0.02288',\n",
-       " 'Ax.KJ9x.xx.KQJxx J9x.xxx.KQJxx.Tx KQ8xx.Ax.Txx.A8x 0.02155',\n",
-       " 'Qxx.AJ.Tx.AKJT8x J9.Kxx.KJxxx.xxx AK8xx.9xxx.Qxx.Q 0.02110',\n",
-       " 'KJ9.KJx.J.KQJTxx Axx.9xx.KQxxx.8x Q8xx.Axx.Txxx.Ax 0.02078',\n",
-       " 'AQJ.Axx.Kxx.K8xx 9x.J9.QJxxxx.Axx K8xxx.Kxxx.T.QJT 0.02044',\n",
-       " 'Q9.AKxx.Kx.Qxxxx A8.Jxx.xxxxx.KJT KJxxxx.9x.QJT.A8 0.02018',\n",
-       " 'KQ.K9xx.x.KQJTxx 9x.AJxx.QJTxx.8x AJ8xxx.x.Kxxx.Ax 0.02015',\n",
-       " 'KQx.Kxxx.x.AKJTx Jx.A9x.KTxxx.8xx A98xx.Jx.QJxx.Qx 0.02015',\n",
-       " 'xx.AJx.Kx.KQJxxx Qx.Kxx.QJTxx.T8x AKJ98x.9xx.xxx.A 0.02013',\n",
-       " 'AQx.KJx.T.KJ8xxx K8x.9xx.KQJxxx.A J9xx.Axx.xxx.QTx 0.01985',\n",
-       " 'J9.Axx.Qx.AK8xxx Axx.J9xx.KJTxx.Q KQ8xx.Kx.xxx.JTx 0.01963',\n",
-       " 'AQx.KJx.x.KJxxxx J8x.A9x.KQTxx.Q8 K9xx.xxx.Jxxx.AT 0.01961',\n",
-       " 'Jxx.AKxx.Q.AT8xx A.Jxxx.Txxxxx.KJ KQ98xx.9.KJx.Qxx 0.01941',\n",
-       " 'AKQ.Kx.JT.QT8xxx 8x.J9xx.KQxxx.Kx J9xxx.Axx.xxx.AJ 0.01899',\n",
-       " 'K8x.AJ9x.T.AK8xx Qx.K.Kxxxxx.JTxx AJ9xx.xxxx.QJx.Q 0.01865',\n",
-       " 'Kx.AK9xx..KQJT8x AJx.Jxx.KJTxxx.x Q98xx.x.Qxxx.Axx 0.01859']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# each row is one sample board\n",
     "# the hands are in the order: LHO, Partner, RHO. Your cards are not shown as they are fixed/\n",
