--- a/UCBC 2024/Simulations/SingleDummyEstimates.ipynb
+++ b/UCBC 2024/Simulations/SingleDummyEstimates.ipynb
@@ -398,7 +398,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1dce90d35d0>"
+       "<matplotlib.legend.Legend at 0x26c8fe97b10>"
       ]
      },
      "execution_count": 15,
