--- a/src/examples/OpeningLead-hf.ipynb
+++ b/src/examples/OpeningLead-hf.ipynb
@@ -96,7 +96,7 @@
     "\n",
     "# what to lead?\n",
     "\n",
-    "lead_bot = BotLead([True, True], hand, models, models.lead_threshold, sampler, False)\n",
+    "lead_bot = BotLead([True, True], hand, models, sampler, False)\n",
     "lead = lead_bot.find_opening_lead(auction)"
    ]
   },
