Added more training boards

--- a/UCBC 2024/Simulations/Bidding1NOvercall.ipynb
+++ b/UCBC 2024/Simulations/Bidding1NOvercall.ipynb
@@ -53,8 +53,8 @@
      "text": [
       "INFO:tensorflow:Restoring parameters from ..\\Models/bidding-3233000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/binfo-808000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lead-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lead-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy-920000\n",
@@ -91,7 +91,7 @@
        "  'adjustment': 33},\n",
        " {'call': 'PASS',\n",
        "  'insta_score': 0.2068,\n",
-       "  'expected_score': -118,\n",
+       "  'expected_score': -119,\n",
        "  'adjustment': 10}]"
       ]
      },
@@ -140,8 +140,8 @@
        "  'adjustment': 49},\n",
        " {'call': '2S',\n",
        "  'insta_score': 0.0126,\n",
-       "  'expected_score': -15,\n",
-       "  'adjustment': -45}]"
+       "  'expected_score': -7,\n",
+       "  'adjustment': -20}]"
       ]
      },
      "execution_count": 4,
@@ -189,42 +189,42 @@
     {
      "data": {
       "text/plain": [
-       "['xx.ATx.AKT.AKQJx Kx.Kx.QJ98xx.9xx Txx.8xx.xxx.Txxx AQJ98x.QJ9xx.x.8 0.94234 2D-P-P-X-P-P-P (8.0)  2D-P-P-X-P-P-2S-3C-P-P-P (9.0) ',\n",
-       " 'Kx.AKT8.x.AKQxxx xxx.x.AJ98xx.J9x Tx.xxx.KQTxx.Txx AQJ98x.QJ9xx.x.8 0.93737 2D-P-P-X-P-P-P (6.5)  2D-P-P-X-P-P-2S-3C-P-P-P (9.9) ',\n",
-       " 'Kxx.Ax.AJ.AKJxxx T.KT8.KT98xx.T9x xxx.xxx.Qxxx.Qxx AQJ98x.QJ9xx.x.8 0.93234 2D-P-P-X-P-P-P (7.2)  2D-P-P-X-P-P-2S-3C-P-P-P (9.5) ',\n",
+       "['xx.ATx.AKT.AKQJx Kx.Kx.QJ98xx.9xx Txx.8xx.xxx.Txxx AQJ98x.QJ9xx.x.8 0.94234 2D-P-P-X-P-P-P (8.0)  2D-P-P-X-P-P-2S-3C-P-P-P (8.3) ',\n",
+       " 'Kx.AKT8.x.AKQxxx xxx.x.AJ98xx.J9x Tx.xxx.KQTxx.Txx AQJ98x.QJ9xx.x.8 0.93737 2D-P-P-X-P-P-P (6.7)  2D-P-P-X-P-P-2S-3C-P-P-P (9.9) ',\n",
+       " 'Kxx.Ax.AJ.AKJxxx T.KT8.KT98xx.T9x xxx.xxx.Qxxx.Qxx AQJ98x.QJ9xx.x.8 0.93234 2D-P-P-X-P-P-P (7.2)  2D-P-P-X-P-P-2S-3C-P-P-P (9.0) ',\n",
        " 'Kxx.Axx.Kx.AKQTx Tx.Kx.AQT98x.xxx xx.T8x.Jxxx.J9xx AQJ98x.QJ9xx.x.8 0.92488 2D-P-P-X-P-P-P (8.1)  2D-P-P-X-P-P-2S-3C-P-P-P (8.1) ',\n",
-       " 'xxx.AKT8.Tx.AKJx Tx.x.QJ98xx.Qxxx Kx.xxx.AKxx.T9xx AQJ98x.QJ9xx.x.8 0.82310 2D-P-P-X-P-P-P (6.6)  2D-P-P-X-P-P-2S-P-P-P (6.9) ',\n",
+       " 'xxx.AKT8.Tx.AKJx Tx.x.QJ98xx.Qxxx Kx.xxx.AKxx.T9xx AQJ98x.QJ9xx.x.8 0.82310 2D-P-P-X-P-P-P (6.5)  2D-P-P-X-P-P-2S-P-P-P (6.9) ',\n",
        " 'Kxx.AKTx.Jx.A9xx x.xx.AQTxxx.xxxx Txx.8x.K98x.KQJT AQJ98x.QJ9xx.x.8 0.81570 2D-P-P-X-P-P-P (7.0)  2D-P-P-X-P-P-2S-P-2N-P-P-P (5.6) ',\n",
-       " 'Kxx.AKTx.A8.AKxx x.x.KQJxxx.QJT9x Txx.8xx.T9xx.xxx AQJ98x.QJ9xx.x.8 0.77768 2D-P-P-X-P-P-P (7.4)  2D-P-P-X-P-P-2S-X-P-P-P (7.4) ',\n",
-       " 'Kxx.AK8x.KJ.Jxxx T.Tx.ATxxxx.KQTx xxx.xx.Q98x.A9xx AQJ98x.QJ9xx.x.8 0.74772 2D-P-P-X-P-P-P (6.7)  2D-P-P-X-P-P-2S-P-2N-P-P-P (6.7) ',\n",
-       " 'xx.AT8x.AQ.AKJTx Tx.K.KT8xxx.Q9xx Kxx.xxx.J9xx.xxx AQJ98x.QJ9xx.x.8 0.71092 2D-P-P-X-P-P-P (7.6)  2D-P-P-X-P-P-2S-3C-P-P-P (7.9) ',\n",
-       " 'xxx.AKx.KJ.AKTxx Tx.8x.AQ9xxx.Jxx Kx.Txx.T8xx.Q9xx AQJ98x.QJ9xx.x.8 0.69083 2D-P-P-X-P-P-P (7.4)  2D-P-P-X-P-P-2S-3C-P-P-P (8.4) ',\n",
+       " 'Kxx.AKTx.A8.AKxx x.x.KQJxxx.QJT9x Txx.8xx.T9xx.xxx AQJ98x.QJ9xx.x.8 0.77768 2D-P-P-X-P-P-P (7.5)  2D-P-P-X-P-P-2S-X-P-P-P (7.5) ',\n",
+       " 'Kxx.AK8x.KJ.Jxxx T.Tx.ATxxxx.KQTx xxx.xx.Q98x.A9xx AQJ98x.QJ9xx.x.8 0.74772 2D-P-P-X-P-P-P (6.7)  2D-P-P-X-P-P-2S-P-2N-P-P-P (6.9) ',\n",
+       " 'xx.AT8x.AQ.AKJTx Tx.K.KT8xxx.Q9xx Kxx.xxx.J9xx.xxx AQJ98x.QJ9xx.x.8 0.71092 2D-P-P-X-P-P-P (7.6)  2D-P-P-X-P-P-2S-3C-P-P-P (7.7) ',\n",
+       " 'xxx.AKx.KJ.AKTxx Tx.8x.AQ9xxx.Jxx Kx.Txx.T8xx.Q9xx AQJ98x.QJ9xx.x.8 0.69083 2D-P-P-X-P-P-P (7.5)  2D-P-P-X-P-P-2S-3C-P-P-P (8.4) ',\n",
        " 'Kx.AT.AKx.AJxxxx xx.K8x.QJ9xxx.Kx Txx.xxx.T8x.QT9x AQJ98x.QJ9xx.x.8 0.68482 2D-P-P-X-P-P-P (7.1)  2D-P-P-X-P-P-2S-3C-P-P-P (8.8) ',\n",
-       " 'Tx.AKT.AKx.ATxxx xx.xx.JT98xx.KQx Kxx.8xx.Qxx.J9xx AQJ98x.QJ9xx.x.8 0.64793 2D-P-P-X-P-P-P (6.3)  2D-P-P-X-P-P-2S-3C-P-P-P (8.7) ',\n",
-       " 'Kxx.AT8x.AKx.JTx x.x.QT8xxx.KQxxx Txx.Kxx.J9x.A9xx AQJ98x.QJ9xx.x.8 0.58614 2D-P-P-X-P-P-P (6.4)  2D-P-P-X-P-P-2S-P-P-P (7.0) ',\n",
+       " 'Tx.AKT.AKx.ATxxx xx.xx.JT98xx.KQx Kxx.8xx.Qxx.J9xx AQJ98x.QJ9xx.x.8 0.64793 2D-P-P-X-P-P-P (6.1)  2D-P-P-X-P-P-2S-3C-P-P-P (8.7) ',\n",
+       " 'Kxx.AT8x.AKx.JTx x.x.QT8xxx.KQxxx Txx.Kxx.J9x.A9xx AQJ98x.QJ9xx.x.8 0.58614 2D-P-P-X-P-P-P (6.5)  2D-P-P-X-P-P-2S-P-P-P (7.0) ',\n",
        " 'xxx.AT.AKJ.AQTxx x.Kxx.QT98xx.Kxx KTx.8xx.xxx.J9xx AQJ98x.QJ9xx.x.8 0.56810 2D-P-P-X-P-P-P (7.5)  2D-P-P-X-P-P-2S-3C-P-P-P (8.1) ',\n",
-       " 'Kxx.AKx.9x.AKJxx x.xx.ATxxxx.Qxxx Txx.T8x.KQJ8.T9x AQJ98x.QJ9xx.x.8 0.55583 2D-P-P-X-P-P-P (6.6)  2D-P-P-X-P-P-2S-3C-P-P-P (8.8) ',\n",
-       " 'Kxx.T8x.AQx.AQxx x.Ax.K98xxx.JTxx Txx.Kxx.JTx.K9xx AQJ98x.QJ9xx.x.8 0.54575 2D-P-P-X-P-P-P (7.3)  2D-P-P-X-P-P-2S-P-2N-P-P-P (6.5) ',\n",
-       " 'Tx.AKxx.AJx.AQxx xx.8.KTxxxx.KJ9x Kxx.Txx.Q98.Txxx AQJ98x.QJ9xx.x.8 0.51104 2D-P-P-X-P-P-P (7.4)  2D-P-P-X-P-P-2S-X-P-3C-P-P-P (7.9) ',\n",
-       " 'Kx.AT8.AKQxx.KQx x.Kx.JT8xxx.AT9x Txxx.xxx.9.Jxxxx AQJ98x.QJ9xx.x.8 0.47180 2D-P-P-X-P-P-P (7.2)  2D-P-P-X-P-P-2S-X-P-3C-P-3D-P-P-P (6.1) ',\n",
+       " 'Kxx.AKx.9x.AKJxx x.xx.ATxxxx.Qxxx Txx.T8x.KQJ8.T9x AQJ98x.QJ9xx.x.8 0.55583 2D-P-P-X-P-P-P (6.7)  2D-P-P-X-P-P-2S-3C-P-P-P (8.6) ',\n",
+       " 'Kxx.T8x.AQx.AQxx x.Ax.K98xxx.JTxx Txx.Kxx.JTx.K9xx AQJ98x.QJ9xx.x.8 0.54575 2D-P-P-X-P-P-P (7.4)  2D-P-P-X-P-P-2S-P-2N-P-P-P (6.5) ',\n",
+       " 'Tx.AKxx.AJx.AQxx xx.8.KTxxxx.KJ9x Kxx.Txx.Q98.Txxx AQJ98x.QJ9xx.x.8 0.51104 2D-P-P-X-P-P-P (7.5)  2D-P-P-X-P-P-2S-X-P-3C-P-P-P (7.9) ',\n",
+       " 'Kx.AT8.AKQxx.KQx x.Kx.JT8xxx.AT9x Txxx.xxx.9.Jxxxx AQJ98x.QJ9xx.x.8 0.47180 2D-P-P-X-P-P-P (7.1)  2D-P-P-X-P-P-2S-X-P-3C-P-3D-P-P-P (6.1) ',\n",
        " 'Tx.AKT8.A8x.ATxx xx.x.KQJ9xx.xxxx Kxx.xxx.Txx.KQJ9 AQJ98x.QJ9xx.x.8 0.43173 2D-P-P-X-P-P-P (7.3)  2D-P-P-X-P-P-2S-P-P-P (8.0) ',\n",
-       " 'xxxx.AKx.KJ.AJTx x.xx.AQT9xx.Q9xx KT.T8x.8xxx.Kxxx AQJ98x.QJ9xx.x.8 0.40376 2D-P-P-X-P-P-P (7.6)  2D-P-P-X-P-P-2S-P-2N-P-P-P (6.9) ',\n",
-       " 'Tx.AKTx.AKJ.AKQJ Kxx.x.QT8xxx.9xx xx.8xx.9xx.Txxxx AQJ98x.QJ9xx.x.8 0.40056 2D-P-P-X-P-P-P (7.3)  2D-P-P-X-P-P-2S-X-P-3C-P-P-P (10.6) ',\n",
+       " 'xxxx.AKx.KJ.AJTx x.xx.AQT9xx.Q9xx KT.T8x.8xxx.Kxxx AQJ98x.QJ9xx.x.8 0.40376 2D-P-P-X-P-P-P (7.8)  2D-P-P-X-P-P-2S-P-2N-P-P-P (6.9) ',\n",
+       " 'Tx.AKTx.AKJ.AKQJ Kxx.x.QT8xxx.9xx xx.8xx.9xx.Txxxx AQJ98x.QJ9xx.x.8 0.40056 2D-P-P-X-P-P-P (7.1)  2D-P-P-X-P-P-2S-X-P-3C-P-P-P (10.6) ',\n",
        " 'Kx.AKTx.AQ.QT9xx Txx.x.KJT98x.Axx xx.8xx.xxxx.KJxx AQJ98x.QJ9xx.x.8 0.36322 2D-P-P-X-P-P-P (7.9)  2D-P-P-X-P-P-2S-3C-P-P-P (8.8) ',\n",
        " 'KTxx.KT8.AQx.KTx .xx.KJTxxx.AQxxx xxx.Axx.98x.J9xx AQJ98x.QJ9xx.x.8 0.36043 2D-P-P-X-P-P-P (7.9)  2D-P-P-X-P-P-2S-P-P-P (7.8) ',\n",
-       " 'xxx.AK8x.8x.AKQT Kx.x.QJT9xx.9xxx Tx.Txx.AKxx.Jxxx AQJ98x.QJ9xx.x.8 0.35050 2D-P-P-X-P-P-P (7.2)  2D-P-P-X-P-P-2S-P-P-P (7.9) ',\n",
-       " 'Kxx.AKx.AKQ.9xxx x.T8.T8xxxx.AKxx Txx.xxx.J9x.QJTx AQJ98x.QJ9xx.x.8 0.34469 2D-P-P-X-P-P-P (6.7)  2D-P-P-X-P-P-2S-X-P-P-P (7.4) ',\n",
-       " 'Txxx.AKxx.Ax.AQJ K.8.K98xxx.Kxxxx xx.Txx.QJTx.T9xx AQJ98x.QJ9xx.x.8 0.32425 2D-P-P-X-P-P-P (7.3)  2D-P-P-X-P-P-2S-X-P-3C-P-P-P (7.6) ',\n",
+       " 'xxx.AK8x.8x.AKQT Kx.x.QJT9xx.9xxx Tx.Txx.AKxx.Jxxx AQJ98x.QJ9xx.x.8 0.35050 2D-P-P-X-P-P-P (7.3)  2D-P-P-X-P-P-2S-P-P-P (7.9) ',\n",
+       " 'Kxx.AKx.AKQ.9xxx x.T8.T8xxxx.AKxx Txx.xxx.J9x.QJTx AQJ98x.QJ9xx.x.8 0.34469 2D-P-P-X-P-P-P (6.6)  2D-P-P-X-P-P-2S-X-P-P-P (7.5) ',\n",
+       " 'Txxx.AKxx.Ax.AQJ K.8.K98xxx.Kxxxx xx.Txx.QJTx.T9xx AQJ98x.QJ9xx.x.8 0.32425 2D-P-P-X-P-P-P (7.1)  2D-P-P-X-P-P-2S-X-P-3C-P-P-P (7.6) ',\n",
        " 'xxx.AKT8.Ax.AJT9 T.xx.KQJT9x.Kxxx Kxx.xx.8xxx.Qxxx AQJ98x.QJ9xx.x.8 0.32177 2D-P-P-X-P-P-P (7.6)  2D-P-P-X-P-P-2S-P-2N-P-P-P (7.1) ',\n",
-       " 'Txx.AKxx.A8.AJTx Kx.8.QT9xxx.Qxxx xx.Txx.KJxx.K9xx AQJ98x.QJ9xx.x.8 0.31892 2D-P-P-X-P-P-P (7.2)  2D-P-P-X-P-P-2S-P-P-P (7.7) ',\n",
-       " 'xxx.AKxx.Q.AKQ9x Kx.Tx.KTxxxx.JTx Tx.8x.AJ98x.xxxx AQJ98x.QJ9xx.x.8 0.30633 2D-P-P-X-P-P-P (6.8)  2D-P-P-X-P-P-2S-3C-P-P-P (9.6) ',\n",
-       " 'KTxx.AKxx.x.KQxx .T8.AQ98xx.A9xxx xxx.xx.KJTxx.JTx AQJ98x.QJ9xx.x.8 0.29030 2D-P-P-X-P-P-P (7.7)  2D-P-P-X-P-P-2S-P-P-P (7.8) ',\n",
-       " 'Txx.AKx.KQx.AKxx Kx.Tx.AJ98xx.QTx xx.8xx.Txx.J9xxx AQJ98x.QJ9xx.x.8 0.28918 2D-P-P-X-P-P-P (7.7)  2D-P-P-X-P-P-2S-X-P-3C-P-P-P (8.7) ',\n",
-       " 'Txxx.A8x.Ax.AKxx x.Kx.Q8xxxx.9xxx Kx.Txx.KJT9.QJTx AQJ98x.QJ9xx.x.8 0.28331 2D-P-P-X-P-P-P (7.1)  2D-P-P-X-P-P-2S-P-P-P (7.2) ',\n",
-       " 'Kxx.A8.AQx.AKT9x xx.KTx.KJ8xxx.Qx Tx.xxx.T9x.Jxxxx AQJ98x.QJ9xx.x.8 0.27609 2D-P-P-X-P-P-P (7.1)  2D-P-P-X-P-P-2S-3C-P-P-P (9.2) ',\n",
+       " 'Txx.AKxx.A8.AJTx Kx.8.QT9xxx.Qxxx xx.Txx.KJxx.K9xx AQJ98x.QJ9xx.x.8 0.31892 2D-P-P-X-P-P-P (7.0)  2D-P-P-X-P-P-2S-P-P-P (7.7) ',\n",
+       " 'xxx.AKxx.Q.AKQ9x Kx.Tx.KTxxxx.JTx Tx.8x.AJ98x.xxxx AQJ98x.QJ9xx.x.8 0.30633 2D-P-P-X-P-P-P (7.0)  2D-P-P-X-P-P-2S-3C-P-P-P (9.6) ',\n",
+       " 'KTxx.AKxx.x.KQxx .T8.AQ98xx.A9xxx xxx.xx.KJTxx.JTx AQJ98x.QJ9xx.x.8 0.29030 2D-P-P-X-P-P-P (7.7)  2D-P-P-X-P-P-2S-P-P-P (7.9) ',\n",
+       " 'Txx.AKx.KQx.AKxx Kx.Tx.AJ98xx.QTx xx.8xx.Txx.J9xxx AQJ98x.QJ9xx.x.8 0.28918 2D-P-P-X-P-P-P (8.1)  2D-P-P-X-P-P-2S-X-P-3C-P-P-P (8.7) ',\n",
+       " 'Txxx.A8x.Ax.AKxx x.Kx.Q8xxxx.9xxx Kx.Txx.KJT9.QJTx AQJ98x.QJ9xx.x.8 0.28331 2D-P-P-X-P-P-P (7.0)  2D-P-P-X-P-P-2S-P-P-P (7.2) ',\n",
+       " 'Kxx.A8.AQx.AKT9x xx.KTx.KJ8xxx.Qx Tx.xxx.T9x.Jxxxx AQJ98x.QJ9xx.x.8 0.27609 2D-P-P-X-P-P-P (7.0)  2D-P-P-X-P-P-2S-3C-P-P-P (8.8) ',\n",
        " 'KTx.Ax.AK9.AQJxx xx.K8x.QT8xxx.Kx xx.Txx.Jxx.T9xxx AQJ98x.QJ9xx.x.8 0.27547 2D-P-P-X-P-P-P (7.1)  2D-P-P-X-P-P-2S-3C-P-P-P (9.4) ',\n",
-       " 'Kxxx.Kxx.xx.AKQJ x.Ax.QT8xxx.Txxx Tx.T8x.AKJ9.9xxx AQJ98x.QJ9xx.x.8 0.26633 2D-P-P-X-P-P-P (7.2)  2D-P-P-X-P-P-2S-P-2N-P-P-P (5.8) ',\n",
-       " 'KTx.AKxx.Jx.KQxx xx.8.K9xxxx.AJxx xx.Txx.AQT8.T9xx AQJ98x.QJ9xx.x.8 0.25094 2D-P-P-X-P-P-P (6.8)  2D-P-P-X-P-P-2S-P-2N-P-P-P (5.4) ']"
+       " 'Kxxx.Kxx.xx.AKQJ x.Ax.QT8xxx.Txxx Tx.T8x.AKJ9.9xxx AQJ98x.QJ9xx.x.8 0.26633 2D-P-P-X-P-P-P (7.0)  2D-P-P-X-P-P-2S-P-2N-P-P-P (6.2) ',\n",
+       " 'KTx.AKxx.Jx.KQxx xx.8.K9xxxx.AJxx xx.Txx.AQT8.T9xx AQJ98x.QJ9xx.x.8 0.25094 2D-P-P-X-P-P-P (6.8)  2D-P-P-X-P-P-2S-P-2N-P-P-P (6.2) ']"
       ]
      },
      "execution_count": 5,
